--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <h1>Tao Chen's Portfolio</h1>
+        <h1>Alex Chen's Portfolio</h1>
         <h2>I am a Web Developer</h2>
         <hr />
         <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
