--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Tao's Website</title>
+        <title>Alex's Website</title>
     </head>
 
     <body>
