--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <body>
         <h1>Alex Chen's Portfolio</h1>
-        <h2>I am a Web Developer</h2>
+        <h2>I am a Web Defdsasdfveloper</h2>
         <hr />
         <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
         <img src="./assets/images/movie-ranking.png" height="200"/>
