Done for today, push the updates

--- a/public/projects.html
+++ b/public/projects.html
@@ -67,6 +67,25 @@
                           Project Video Demo Link
                         </a></p>
                     </div>
+                    <div>
+                        <p style="padding-top: 20px">
+                            The software's purpose is to identify the most efficient solution (minimizing time consumption) for loading/unloading operations and optimizing the balance of a ship at Keoghs Port. Keoghs Port is a company that generates revenue through ship loading, unloading, and balancing.
+                        </p>
+                        <img src="../images/ship_port.jpg" class="img-fluid" alt="Project Image">
+                        <p style="padding-top: 20px">
+                            When a ship arrives at the port, the operator—Keoghs Port staff stationed in a tower that moves along with the crane—receives a manifest from the captain. This manifest is a text file containing information about the containers, including their coordinates, weight, and descriptions (e.g., Walmart Ohio Cat toys).
+                        </p>
+                        <img src="../images/manifest.png" class="img-fluid" alt="Project Image">
+                        <p style="padding-top: 5px; padding-left: 200px"><em>A manifest sample</em></p>
+                        <p style="padding-top: 20px">
+                            At this moment, the operator already has a list of containers that need to be unloaded and containers on trucks waiting to be loaded.
+                        </p>
+                        <img src="../images/holding_trucks.png" class="img-fluid" alt="Project Image">
+                        <p style="padding-top: 20px">
+                            Before the introduction of this software, operators relied on pen and paper to calculate what they believed to be the best solution based on their past experience. This manual process was time-consuming and couldn't guarantee the attainment of the optimal solution.
+                        </p>
+                        <img src="../images/worker_calculating.jpeg" class="img-fluid" alt="Project Image">
+                    </div>
                 </div>
             </div>
             
