--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Tao Chen's Website</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
-
+      p {
+        max-width: 300px; /* 设置最大宽度 */
+        word-wrap: break-word; /* 在单词内部换行 */
+    }
     </style>
 </head>
    
