--- a/public/projects.html
+++ b/public/projects.html
@@ -27,23 +27,13 @@
         .clear {
             clear: both; /* 清除浮动 */
         }
-        /* Override Bootstrap Carousel styles to always show controls */
-        .carousel-control-prev,
-        .carousel-control-next {
-            opacity: 1;
-            pointer-events: auto;
+        .carousel-control-prev-icon,
+        .carousel-control-next-icon {
+            background-color: blue;
         }
 
-        /* Override Bootstrap Carousel styles to always show controls on hover */
-        .carousel:hover .carousel-control-prev,
-        .carousel:hover .carousel-control-next {
-            opacity: 1;
-        }
-
-        /* Override Bootstrap Carousel styles to always show controls on focus */
-        .carousel:focus .carousel-control-prev,
-        .carousel:focus .carousel-control-next {
-            opacity: 1;
+        .visually-hidden {
+            color: red;
         }
 
     </style>
@@ -107,11 +97,11 @@
                     <div class="accordion" id="accordionPanelsStayOpenExample">
                         <div class="accordion-item">
                           <h2 class="accordion-header">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="false" aria-controls="panelsStayOpen-collapseOne">
                               Motivation for making this software
                             </button>
                           </h2>
-                          <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
+                          <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse">
                             <div class="accordion-body">
                               <!-- Put the Motivation for the software right here -->
                               <div>
@@ -179,32 +169,41 @@
                                       </svg>
                                 .</li>
                               </ul>
-                              <div id="carouselExampleFade" class="carousel slide carousel-fade">
+                              <p style="padding-top: 15px; padding-bottom: 10px;"><em><strong>The following slides show the Spanning Tree of the algorithm:</strong></em></p>
+                              <div id="carouselExampleDark" class="carousel carousel-dark slide">
+                                <div class="carousel-indicators">
+                                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                                </div>
                                 <div class="carousel-inner">
-                                  <div class="carousel-item active">
+                                  <div class="carousel-item active" data-bs-interval="10000">
                                     <img src="../images/alg1.png" class="d-block w-100" alt="...">
                                   </div>
-                                  <div class="carousel-item">
-                                    <img src="../images/alg2.png" class="d-block w-100" alt="...">
+                                  <div class="carousel-item" data-bs-interval="2000">
+                                    <img src="../images/alg2.png" class="d-block w-100" alt="..."> 
                                   </div>
                                   <div class="carousel-item">
-                                    <img src="../images/alg3.png" class="d-block w-100" alt="...">
+                                    <img src="../images/alg3.png" class="d-block w-100" alt="..."> 
                                   </div>
                                   <div class="carousel-item">
-                                    <img src="../images/alg4.png" class="d-block w-100" alt="...">
+                                    <img src="../images/alg4.png" class="d-block w-100" alt="..."> 
                                   </div>
                                   <div class="carousel-item">
-                                    <img src="../images/alg5.png" class="d-block w-100" alt="...">
+                                    <img src="../images/alg5.png" class="d-block w-100" alt="..."> 
                                   </div>
                                 </div>
-                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
                                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                   <span class="visually-hidden">Previous</span>
                                 </button>
-                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
                                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                   <span class="visually-hidden">Next</span>
                                 </button>
+                                
                               </div>
                             </div>
                           </div>
@@ -212,7 +211,7 @@
                         <div class="accordion-item">
                           <h2 class="accordion-header">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                              Accordion Item #3
+                              Walking through the software
                             </button>
                           </h2>
                           <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
@@ -240,7 +239,8 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
         </script>
-
+        <script src="/docs/5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+        
         <script>
             function goBack() {
                 window.history.back();
