--- a/public/projects.html
+++ b/public/projects.html
@@ -98,7 +98,7 @@
                         <div class="accordion-item">
                           <h2 class="accordion-header">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="false" aria-controls="panelsStayOpen-collapseOne">
-                              Motivation for making this software
+                              The Motivation for Making this Software
                             </button>
                           </h2>
                           <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse">
@@ -147,7 +147,7 @@
                         <div class="accordion-item">
                           <h2 class="accordion-header">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                              Algrithms of loading/unloading and balancing a ship
+                              Algrithms of Loading/unloading and Balancing a Ship
                             </button>
                           </h2>
                           <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
@@ -211,7 +211,7 @@
                         <div class="accordion-item">
                           <h2 class="accordion-header">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                              Walking through the software
+                              Walking through the Software
                             </button>
                           </h2>
                           <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
@@ -221,7 +221,7 @@
                           </div>
                         </div>
                       </div>
-                    <!-- Accordion Ending point -->
+                    <!-- Accordion Ending Point -->
 
                     
                 </div>
