finished algorithm part

--- a/public/projects.html
+++ b/public/projects.html
@@ -205,6 +205,7 @@
                                 </button>
                                 
                               </div>
+                              <p style="padding-top: 20px;"><strong>The loading/unloading algorithm is similar to the balancing algorithm. </strong>In the loading process, the software verifies whether the container picked up by the crane is one of containers for unloading. If it is, the software incorporates it into the unloading sequence and subsequently introduces a loading container to this sequence. This approach effectively prevents the crane from remaining idle. Additionally, the loading container relies on the software to determine the optimal coordinate with the least cost for placement.</p>
                             </div>
                           </div>
                         </div>
