--- a/public/projects.html
+++ b/public/projects.html
@@ -10,9 +10,9 @@
         crossorigin="anonymous">
     <style>
         /* Add your custom styles here if needed */
-        /* .container {
-            max-width: 50%; 
-        } */
+        .container {
+            max-width: 80%; 
+        }
 
         .content {
             /* float: left; 左浮动，使文本内容在左侧 */
@@ -27,14 +27,7 @@
         .clear {
             clear: both; /* 清除浮动 */
         }
-        .carousel-control-prev-icon,
-        .carousel-control-next-icon {
-            background-color: blue;
-        }
 
-        .visually-hidden {
-            color: red;
-        }
 
     </style>
 </head>
@@ -166,7 +159,7 @@
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-down" viewBox="0 0 16 16" color="red">
                                         <path fill-rule="evenodd" d="M3.5 6a.5.5 0 0 0-.5.5v8a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5v-8a.5.5 0 0 0-.5-.5h-2a.5.5 0 0 1 0-1h2A1.5 1.5 0 0 1 14 6.5v8a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 14.5v-8A1.5 1.5 0 0 1 3.5 5h2a.5.5 0 0 1 0 1z"/>
                                         <path fill-rule="evenodd" d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708z"/>
-                                      </svg>
+                                    </svg>
                                 .</li>
                               </ul>
                               <p style="padding-top: 15px; padding-bottom: 10px;"><em><strong>The following slides show the Spanning Tree of the algorithm:</strong></em></p>
@@ -217,9 +210,77 @@
                           </h2>
                           <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
                             <div class="accordion-body">
-                              <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                              <strong>When we run the software,</strong> we first see the company's logo in the upper left corner, and there is a check in in the upper right corner to record which operator is operating the crane.
+
+                              <img style="max-width: 100%; max-height: 100%; padding-top: 20px; padding-bottom: 20px;" src="../images/software_images/software1.png" alt="Software Image 1">
+                              
+                              <p>This operator can click "check in", and a window will pop up for the operator to enter his name, then his name will show on the software.</p>
+                            
+                              <img style="max-width: 100%; padding-top: 15px; padding-bottom: 20px;" src="../images/software_images/software2.png" alt="Software Image 2">
+
+                              <p>Next, the software asks the operator to upload a manifest file.</p>
+                              <img style="max-width: 100%; max-height: 100%; padding-top: 20px; padding-bottom: 20px;" src="../images/software_images/software3.png" alt="Software Image 3">
+                              <p>On the next page of the software, displaying file names enables the operator to ensure that he is dealing with the correct file. And the operator Andy needs to choose loading/unloading or balancing the ship to continue.</p>
+                              <img style="max-width: 100%; max-height: 100%; padding-top: 20px; padding-bottom: 20px;" src="../images/software_images/software4.png" alt="Software Image 4">
+                              <strong>Let's assume Andy clicks loading/unloading: </strong>
+                              <p>Now, Andy can choose which containers on the ship he needs to unload, and he can also add loading containers he needs to loading on the ship.</p>
+                              <img style="max-width: 100%; max-height: 100%; padding-top: 20px; padding-bottom: 20px;" src="../images/software_images/software5.png" alt="Software Image 5">
+                              <p>After Andy pick the containers, the software will show up a summary to let him double check the containers he just choose to unload and load.</p>
+                              <img style="max-width: 100%; max-height: 100%; padding-top: 20px; padding-bottom: 20px;" src="../images/software_images/software6.png" alt="Software Image 6">
+                              <p>Then, the software will show how many step is going to need for this process, and how long it will take. There is also a loading and unloading sequence so that Andy can inform waiting truck drivers about the order of entry into the port.</p>
+                              <img style="max-width: 100%; max-height: 100%; padding-top: 20px; padding-bottom: 20px;" src="../images/software_images/software7.png" alt="Software Image 7">
+                              <p>Andy hits <strong>Start</strong> button, then there will be a bunch of steps show to Andy what he needs to do.</p>
                             </div>
-                          </div>
+                            <div id="carouselExampleDark1" class="carousel carousel-dark slide">
+                                <div class="carousel-indicators">
+                                  <button type="button" data-bs-target="#carouselExampleDark1" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                  <button type="button" data-bs-target="#carouselExampleDark1" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                  <button type="button" data-bs-target="#carouselExampleDark1" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                  <button type="button" data-bs-target="#carouselExampleDark1" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                                  <button type="button" data-bs-target="#carouselExampleDark1" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                                  <button type="button" data-bs-target="#carouselExampleDark1" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                                  <button type="button" data-bs-target="#carouselExampleDark1" data-bs-slide-to="6" aria-label="Slide 7"></button>
+                                  <button type="button" data-bs-target="#carouselExampleDark1" data-bs-slide-to="7" aria-label="Slide 8"></button>
+                                </div>
+                                <div class="carousel-inner">
+                                  <div class="carousel-item active" data-bs-interval="10000">
+                                    <img src="../images/software_images/steps_images/step1.png" class="d-block w-100" alt="...">
+                                  </div>
+                                  <div class="carousel-item" data-bs-interval="2000">
+                                    <img src="../images/software_images/steps_images/step2.png" class="d-block w-100" alt="..."> 
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img src="../images/software_images/steps_images/step3.png" class="d-block w-100" alt="..."> 
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img src="../images/software_images/steps_images/step4.png" class="d-block w-100" alt="..."> 
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img src="../images/software_images/steps_images/step5.png" class="d-block w-100" alt="..."> 
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img src="../images/software_images/steps_images/step6.png" class="d-block w-100" alt="..."> 
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img src="../images/software_images/steps_images/step7.png" class="d-block w-100" alt="..."> 
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img src="../images/software_images/steps_images/step8.png" class="d-block w-100" alt="..."> 
+                                  </div>
+                                </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark1" data-bs-slide="prev">
+                                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                  <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark1" data-bs-slide="next">
+                                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                  <span class="visually-hidden">Next</span>
+                                </button>   
+                            </div>
+                            <p style="padding-top: 15px;">When all steps are completed, the software will generate a reminder to remind the operator to send the updated manifest file to the captain.</p>
+                            <img style="max-width: 100%; max-height: 100%; padding-top: 20px; padding-bottom: 20px;" src="../images/software_images/steps_images/task_done.png" alt="Software Image 8">
+                            <p>It should be noted that the step-by-step display was requested by the customer <i><strong>Keoghs Port</strong></i> to avoid operator error. The final update of the container coordinates in the manifest file is also done by the software in the background, and the reminder sent to the ship's captain is also requested by the customer <i><strong>Keoghs Port</strong></i>.</p>
+                        </div>
                         </div>
                       </div>
                     <!-- Accordion Ending Point -->
