Finished more than half of project2

--- a/public/projects.html
+++ b/public/projects.html
@@ -383,7 +383,7 @@
         <div class="col-md-8">
           <h5 style="text-align: center; padding-top: 30px; padding-bottom: 15px;">Restaurant Online Ordering Website
           </h5>
-          <img style="padding-bottom: 30px;" src="../project2_images/front_page.png" class="img-fluid"
+          <img style="padding-bottom: 30px;" src="../project2_images/walk_through/order_page.png" class="img-fluid"
             alt="Project Image">
         </div>
         <div class="col-md-4">
@@ -417,19 +417,61 @@
                 <!-- Put technology stack rationale right here -->
                 <div>
                   <p style="padding-top: 10px">
-                    <strong>The main language used to make this website is JavaScript.</strong> is to identify the most
-                    efficient solution (minimizing
-                    time consumption) for loading/unloading operations and optimizing the balance of a ship at Keoghs
-                    Port. Keoghs Port is a company that generates revenue through
-                    <code>ship loading, unloading, and balancing</code>.
+                    <strong>The main language used to make this website is JavaScript.</strong> The 2.6% of CSS I used the inline library <code>Tailwind</code>,
+                    and the 2.2% of HTML is responsible for the icon of the website tab and the website's whole background color and text color.
                   </p>
-                  <img style="max-width: 100%; max-height: 100%; padding-top: 20px; padding-bottom: 20px;"
+                  <img style="max-width: 70%; max-height: 70%; padding-top: 20px; padding-bottom: 20px;"
                     src="../project2_images/html_languages.png">
                   <ul>
                     <li><strong>JavaScript</strong></li>
-                      <p>I used React</p>
+                    <ul>
+                      <li>React Router</li>
+                      <img style="padding-bottom: 10px;" src="../project2_images/react_router_logo.png" class="img-fluid">
+                      <p>By using this library, the app can immediately render some new UI and make data requests with <strong>'fetch'</strong> 
+                      to update the page with new information. A easy way to share data from different website pages.</p>
+
+                      <li>Redux</li>
+                      <img style="padding-bottom: 10px; width: 45%" src="../project2_images/redux_logo.png" class="img-fluid">
+                      <p>Using the Redux library makes it easy to capture an <strong>entire event</strong>, such as a customer's order, and notify all different pages about this event. 
+                        It enables the reflection of this event across various pages seamlessly.</p>
+                    </ul>
+                      
                     <li><strong>CSS</strong></li>
+                    <ul>
+                      <li>Tailwind</li>
+                      <img style="padding-bottom: 10px; width: 50%" src="../project2_images/tailwind_logo.png" class="img-fluid">
+                      <p>
+                        Tailwind CSS offers a streamlined development experience with its utility-first approach, 
+                        allowing you to write inline CSS directly in your HTML without the need to switch between separate style sheets and HTML files frequently. 
+                        The code written in Tailwind is highly readable compared to Bootstrap, and its integration with VS Code enhances the developer experience. 
+                        </p>
+                      <img style="padding-bottom: 10px; width: 100%" src="../project2_images/tailwind1.png" class="img-fluid">
+                      <p>With features like <code>hover previews</code>, you can easily understand and modify the underlying traditional CSS by simply hovering over a code snippet, 
+                        providing a clear understanding of how to achieve the desired styling changes.</p>
+                      <img style="padding-bottom: 20px; width: 80%" src="../project2_images/tailwind2.png" class="img-fluid">
+                    </ul>
+
                     <li><strong>HTML</strong></li>
+                    <ul>
+                      <li>Website Icon</li>
+                      <img style="padding-bottom: 20px; width: 30%" src="../project2_images/website_icon.png" class="img-fluid">
+                      <p>In my project, HTML plays a relatively minor role, primarily contributing to two key functionalities. Firstly, 
+                        it facilitates the display of a hamburger icon on the website's tab, offering a visually intuitive element for navigation.</p>
+                      <li>Background Color and Text Color</li>
+                      <p>Secondly, HTML is instrumental in setting the background color and text color of the website, 
+                        providing a foundational structure for the overall visual presentation.</p>
+                      </ul>
+                    <li><strong>API</strong></li>
+                    <ul>
+                      <li>
+                        Free Online API
+                        
+                      </li>
+                      <img style="padding-bottom: 20px; width: 70%" src="../project2_images/api.png" class="img-fluid">
+                      <p>Can go to this website to check the details: <a href="https://react-fast-pizza-api.onrender.com/api/menu" 
+                        target="_blank">Click Here</a></p>
+
+                    </ul>
                   </ul>
                 </div>
               </div>
@@ -450,15 +492,12 @@
               <div class="accordion-body">
                 <!-- Put technology stack rationale right here -->
                 <div>
-                  <p style="padding-top: 10px">
-                    <strong>The main language used to make this website is JavaScript.</strong> is to identify the most
-                    efficient solution (minimizing
-                    time consumption) for loading/unloading operations and optimizing the balance of a ship at Keoghs
-                    Port. Keoghs Port is a company that generates revenue through
-                    <code>ship loading, unloading, and balancing</code>.
-                  </p>
-                  <img style="max-width: 100%; max-height: 100%; padding-top: 20px; padding-bottom: 20px;"
-                    src="../project2_images/html_languages.png">
+                  <ul>
+                    <li><strong>Home Page</strong></li>
+                    <img style="padding-bottom: 20px; padding-top: 10px; width: 75%" src="../project2_images/front_page.png" class="img-fluid">
+                    <p>Customers can track orders by entering their existing order number in the upper right corner of the homepage, 
+                      or they can start placing an order by entering their name</p>
+                  </ul>
                 </div>
               </div>
             </div>
