push before heading to bed

--- a/public/projects.html
+++ b/public/projects.html
@@ -497,6 +497,33 @@
                     <img style="padding-bottom: 20px; padding-top: 10px; width: 75%" src="../project2_images/front_page.png" class="img-fluid">
                     <p>Customers can track orders by entering their existing order number in the upper right corner of the homepage, 
                       or they can start placing an order by entering their name</p>
+                    <li><strong>Ordering Page</strong></li>
+                    <img style="padding-bottom: 20px; padding-top: 10px; width: 75%" src="../project2_images/walk_through/order_page1.png" class="img-fluid">
+                    <p>On this page, customers can select the pizzas they want by clicking the <strong>ADD TO CART</strong> button. 
+                      Once they click <strong>ADD TO CART</strong>, 
+                      they can increase or decrease the order quantity of that pizza.</p>
+                    <li><strong>Cart Page</strong></li>
+                    <img style="padding-bottom: 20px; padding-top: 10px; width: 75%" src="../project2_images/walk_through/cart_page1.png" class="img-fluid">
+                    <ul>
+                      <li>On <i>Cart Page, </i>Customers can go back to the previous page by hitting <strong>Back to menu</strong> button.</li>
+                      <li>Customers can <code>'-'</code>, <code>'+'</code>, or <code>'delete'</code> items</li>
+                      <li>Customers can <code>order</code> more food, or <code>CLEAR CART</code>.</li>
+                      <li>Customers can check how many items they have ordered, and the total price.</li>
+                    </ul>
+                    <li style="padding-top: 15px;"><strong>Input Phone Number and Address Page</strong></li>
+                    <img style="padding-bottom: 20px; padding-top: 10px; width: 75%" src="../project2_images/walk_through/cart_page2.png" class="img-fluid">
+                    <ul>
+                      <li>Customers will be asked to enter their <code>phone number</code> and <code>address</code> on this page.</li>
+                      <li>By clicking <code>"Wanna a priority order?"</code> check box, customers will pay more and get a faster order.</li>
+                    </ul>
+                    <li style="padding-top: 15px;"><strong>Preparing Order Page</strong></li>
+                    <img style="padding-bottom: 20px; padding-top: 10px; width: 75%" src="../project2_images/walk_through/Preparing.png" class="img-fluid">
+                    <ul>
+                      <li>Customers can track their order by using the <code>Order Number</code> shows on this page.</li>
+                      <li><code>Order Status</code> is showing on the right corner of this page.</li>
+                      <li><code>The Waiting Time</code> shows on this page.</li>
+                      <li>If customers feel that the order waiting time is too long, they can still get a priority order by clicking the <code>GO PRIORITY</code> button.</li>
+                    </ul>
                   </ul>
                 </div>
               </div>
