Fixed a bug that some logos can be very large in some scenarios

--- a/public/projects.html
+++ b/public/projects.html
@@ -426,12 +426,12 @@
                     <li><strong>JavaScript</strong></li>
                     <ul>
                       <li>React Router</li>
-                      <img style="padding-bottom: 10px;" src="../project2_images/react_router_logo.png" class="img-fluid">
+                      <img style="padding-bottom: 10px; width: 280px" src="../project2_images/react_router_logo.png" class="img-fluid">
                       <p>By using this library, the app can immediately render some new UI and make data requests with <strong>'fetch'</strong> 
                       to update the page with new information. A easy way to share data from different website pages.</p>
 
                       <li>Redux</li>
-                      <img style="padding-bottom: 10px; width: 45%" src="../project2_images/redux_logo.png" class="img-fluid">
+                      <img style="padding-bottom: 10px; width: 230px" src="../project2_images/redux_logo.png" class="img-fluid">
                       <p>Using the Redux library makes it easy to capture an <strong>entire event</strong>, such as a customer's order, and notify all different pages about this event. 
                         It enables the reflection of this event across various pages seamlessly.</p>
                     </ul>
@@ -439,7 +439,7 @@
                     <li><strong>CSS</strong></li>
                     <ul>
                       <li>Tailwind</li>
-                      <img style="padding-bottom: 10px; width: 50%" src="../project2_images/tailwind_logo.png" class="img-fluid">
+                      <img style="padding-bottom: 10px; width: 280px" src="../project2_images/tailwind_logo.png" class="img-fluid">
                       <p>
                         Tailwind CSS offers a streamlined development experience with its utility-first approach, 
                         allowing you to write inline CSS directly in your HTML without the need to switch between separate style sheets and HTML files frequently. 
